WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90966
[Qt] REGRESSION(
r107171
): Fix --timeout option of Qt's DRT
https://bugs.webkit.org/show_bug.cgi?id=90966
Summary
[Qt] REGRESSION(r107171): Fix --timeout option of Qt's DRT
Csaba Osztrogonác
Reported
2012-07-11 04:16:26 PDT
Patch is coming soon.
Attachments
Patch
(1.19 KB, patch)
2012-07-11 04:18 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-07-11 04:18:48 PDT
Created
attachment 151675
[details]
Patch
Caio Marcelo de Oliveira Filho
Comment 2
2012-07-11 06:15:15 PDT
Looks good to me.
Ryosuke Niwa
Comment 3
2012-07-11 08:01:16 PDT
Comment on
attachment 151675
[details]
Patch rs=me.
Csaba Osztrogonác
Comment 4
2012-07-11 08:14:27 PDT
Comment on
attachment 151675
[details]
Patch Clearing flags on attachment: 151675 Committed
r122335
: <
http://trac.webkit.org/changeset/122335
>
Csaba Osztrogonác
Comment 5
2012-07-11 08:14:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug