[Qt] REGRESSION(r107171): Fix --timeout option of Qt's DRT https://bugs.webkit.org/show_bug.cgi?id=90966

Reviewed by Ryosuke Niwa.

* DumpRenderTree/qt/main.cpp:
(main): Don't remove the argument, because takeOptionValue() did it before.

Canonical link: https://commits.webkit.org/108811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122335 268f45cc-cd09-0410-ab3c-d52691b4dbfc